--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 <header>
 	
-	<a class="title">Greg's List</a>
+	<div class="title">Greg's List</div>
 	<nav class="navbar">
 		<a href=https://css-tricks.com/bem-101/>Post</a>
 		<a href=https://https://courses.thinkful.com/fewd-001v6/project/1.5.6/>Account</a>
@@ -28,11 +28,11 @@
 		</form>
 		<div class="tfclear"></div>
 	</div>
-	<div id="numbering">
-		<table class="numbers">
-			<tr>< prev</tr><tr>1 to 100 of 179</tr><tr>next ></tr>
-		</table>
-	</div>
+  <nav class="pages">
+    <a class="pages-button">&lt; prev</a>
+    <span class="pages-display">1 to 100 of 179</span>
+    <a class="pages-button">next &gt;</a>
+  </nav>
 	<div>
 		<table class="jobs">
 		<tr>
