css/html refactors

--- a/index.html
+++ b/index.html
@@ -12,22 +12,19 @@
 
 </head>
 <body>
-<header>
-	
-	<a class="title">Greg's List</a>
-	<nav class="navbar">
-		<a href=https://css-tricks.com/bem-101/>Post</a>
-		<a href=https://https://courses.thinkful.com/fewd-001v6/project/1.5.6/>Account</a>
-	</nav>
+	<header>
+		<a class="title">Greg's List</a>
+		<nav class="navbar">
+			<a href=https://css-tricks.com/bem-101/>Post</a>
+			<a href=https://https://courses.thinkful.com/fewd-001v6/project/1.5.6/>Account</a>
+		</nav>
 	</header>
 <main>
-<div id="tfheader">
 		<form id="tfnewsearch" method="get" action="http://www.google.com">
-		        <input type="text" id="tfq" class="tftextinput2" name="q" size="21" maxlength="120" value="Search software jobs">
-		        <input type="image" src="https://tf-curricula-prod.s3.amazonaws.com/curricula/5b3249003592fc371bac5c6254b50c9c/FEWD-001/v6/assets2/1.5.6_challenge_design_to_code/magnifying-glass.png" class="tfbutton">
+		        <input type="text" class="tftextinput2" value="Search jobs"/>
+		        <input type="image" class="tfbutton2" src="https://tf-curricula-prod.s3.amazonaws.com/curricula/5b3249003592fc371bac5c6254b50c9c/FEWD-001/v6/assets2/1.5.6_challenge_design_to_code/magnifying-glass.png"/>
 		</form>
 		<div class="tfclear"></div>
-	</div>
 	<div id="numbering">
 		<table class="numbers">
 			<tr>< prev</tr><tr>1 to 100 of 179</tr><tr>next ></tr>
